--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@types/react-slick": "^0.23.13",
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-countup": "^6.5.3",
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.68.0",
+    "react-slick": "^0.31.0",
+    "simple-icons": "^16.1.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
