--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -22,23 +22,29 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # 1️⃣ Instala PNPM (ESTE PASO ES CLAVE)
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          run_install: false
+
+      # 2️⃣ Instala Node y habilita cache PNPM
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: "pnpm"
 
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9
-
+      # 3️⃣ Instala dependencias
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      # 4️⃣ Build
       - name: Build
         run: pnpm build
 
+      # 5️⃣ Sube el output estático
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
