--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@tanstack/react-query": "^5.90.16",
     "@types/react-slick": "^0.23.13",
     "next": "16.0.7",
+    "nodemailer": "^7.0.12",
     "react": "19.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "react-slick": "^0.31.0",
+    "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "simple-icons": "^16.1.0",
     "slick-carousel": "^1.8.1"
   },
