--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.90.16",
     "@types/react-slick": "^0.23.13",
     "next": "16.0.7",
+    "next-themes": "^0.4.6",
     "nodemailer": "^7.0.12",
     "react": "19.2.0",
     "react-countup": "^6.5.3",
